# python-project-lvl3

./: .flake8  README.md  makefile  pyproject.toml
.github/workflows/: test-package.yml
page_loader/: __init__.py  cli.py  errors.py  html.py  logging.py  page_loader.py  storage.py  url.py
page_loader/scripts/: page_loader.py
tests/: test_html.py  test_page_loader.py  test_storage.py  test_url.py  test_w_cli.py
tests/fixtures/: output_page.html
