[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "This is a Hexlet course internship project."
authors = ["Angekok <angekok@mail.ru>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[tool.poetry.scripts]
page_loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
