[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "This is a Hexlet course internship project."
authors = ["Angekok <angekok@mail.ru>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
bs4 = "^0.0.1"
lxml = "^4.6.3"
progress = "^1.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pyfakefs = "^4.5.0"
pook = "^1.0.1"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
